<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_ex6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage2">

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="@dimen/component"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="35dp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:padding="@dimen/padding_editText"
        android:background="@drawable/bg_edit_text"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        android:layout_marginTop="@dimen/margin_6"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"/>

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textSize="@dimen/component"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        android:layout_marginTop="@dimen/margin_5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="@dimen/component"
        android:textColor="@color/pink"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="35dp"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        app:layout_constraintBottom_toTopOf="@id/button_login"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_login"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/para"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/remember_me"
        android:layout_marginTop="@dimen/margin_5"/>

</androidx.constraintlayout.widget.ConstraintLayout>